RESOLVED FIXED 161562
Unbreak customElements.whenDefined after r205383 with a crash fix
https://bugs.webkit.org/show_bug.cgi?id=161562
Summary Unbreak customElements.whenDefined after r205383 with a crash fix
Ryosuke Niwa
Reported 2016-09-02 19:00:45 PDT
Fix whenDefined with a crash fix after https://trac.webkit.org/changeset/205383.
Attachments
Reverts r205383 and fixes the crash (6.58 KB, patch)
2016-09-02 19:10 PDT, Ryosuke Niwa
no flags
Radar WebKit Bug Importer
Comment 1 2016-09-02 19:01:43 PDT
Ryosuke Niwa
Comment 2 2016-09-02 19:10:18 PDT
Created attachment 287848 [details] Reverts r205383 and fixes the crash
Ryosuke Niwa
Comment 3 2016-09-03 16:06:35 PDT
Comment on attachment 287848 [details] Reverts r205383 and fixes the crash Thanks for the review! I'll monitor https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Fdom%2FAttr%2Faccess-after-element-destruction.html to make sure this doesn't reintroduce the crash.
WebKit Commit Bot
Comment 4 2016-09-03 16:27:43 PDT
Comment on attachment 287848 [details] Reverts r205383 and fixes the crash Clearing flags on attachment: 287848 Committed r205410: <http://trac.webkit.org/changeset/205410>
WebKit Commit Bot
Comment 5 2016-09-03 16:27:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.