Unbreak customElements.whenDefined after r205383 with a crash fix https://bugs.webkit.org/show_bug.cgi?id=161562

Reviewed by Darin Adler.

Source/WebCore:

The crash was caused by DeferredWrapper::contextDestroyed not calling ContextDestructionObserver::contextDestroyed.

This caused m_scriptExecutionContext to not being set to nullptr when the Document was destroyed before DOMWindow
during a single GC sweeping, and resulted in a use-after-free in ContextDestructionObserver's destructor.

Fixed the crash and reverted r205383.

Tests: fast/custom-elements/CustomElementRegistry.html

* bindings/js/JSCustomElementRegistryCustom.cpp:
(WebCore::whenDefinedPromise):
* bindings/js/JSDOMPromise.cpp:
(WebCore::DeferredWrapper::contextDestroyed): Fixed the crash.
* dom/CustomElementRegistry.cpp:
(WebCore::CustomElementRegistry::addElementDefinition):
* dom/CustomElementRegistry.h:
(WebCore::CustomElementRegistry::promiseMap):

LayoutTests:

Revert r205383 now that all test cases pass.

* fast/custom-elements/CustomElementRegistry-expected.txt:


Canonical link: https://commits.webkit.org/179742@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205410 268f45cc-cd09-0410-ab3c-d52691b4dbfc