Source/WebCore/bindings/js/JSCustomElementRegistryCustom.cpp
@@ -182,7 +182,11 @@ static JSValue whenDefinedPromise(ExecState& state, JSDOMGlobalObject& globalObj
         return jsPromise.promise();
     }
 
-    return jsUndefined();
+    auto result = registry.promiseMap().ensure(localName, [&] {
+        return DeferredWrapper::create(&state, &globalObject, JSPromiseDeferred::create(&state, &globalObject));
+    });
+
+    return result.iterator->value->promise();
 }
 
 JSValue JSCustomElementRegistry::whenDefined(ExecState& state)
