Source/WebCore/dom/CustomElementRegistry.cpp
@@ -78,6 +78,9 @@ void CustomElementRegistry::addElementDefinition(Ref<JSCustomElementInterface>&&
 
     if (auto* document = m_window.document())
         enqueueUpgradeInShadowIncludingTreeOrder(*document, elementInterface.get());
+
+    if (auto promise = m_promiseMap.take(localName))
+        promise.value()->resolve(nullptr);
 }
 
 JSCustomElementInterface* CustomElementRegistry::findInterface(const Element& element) const
